# twineconsensus

./: .gitignore  .gitmodules  .travis.yml  BUILD.md  LICENCE  LICENCE_HEADER  Makefile.am  README.md  configure.ac
include/: twineconsensus.h
scripts/: check_licence.sh  install_natives.sh
src/: Makefile.am  export-functions  main.c  tw_secp256k1.c  tw_secp256k1.h  tw_sha256.c  tw_sha256.h  tw_u256.c  tw_u256.h  twineconsensus.c  twineconsensus.h
src/crypt/src/: tw_hash.c  tw_hash.h  tw_ripemd_160.c  tw_ripemd_160.h  tw_signature_verify.c  tw_signature_verify.h
src/lib_nacl/: FILE_SOURCE
src/lib_supercop/dummy/src/: randombytes.c
src/math/src/: tw_uint.c  tw_uint.h
src/nacl/: FILE_SOURCE
src/test/src/: tw_test_harness.c  tw_test_harness.h
tests/: Makefile.am  test_ed25519.c  test_hash.c  test_placeholder.c  test_secp256k1.c  test_sha256.c  test_u256.c  test_uint.c  test_version_check.c
tests/vectors/: placeholder.h  vectors_ed25519.h  vectors_hash.h  vectors_secp256k1.h  vectors_sha.h  vectors_sha256.h  vectors_u256.h
